# udmi

./: .gencode_hash.txt  .gitignore  .wordlist.txt  clientlib_python.txt  fix.py  fix2.py  fix_schema_itemized.py  fix_test_itemized.py  patch.diff  patch_test.diff  patch_test_itemized.diff  plan.md  schema_itemized_new.out  test_itemized_new.out
.github/workflows/: testing.yml
bridgehead/tests/: test_bridgehead
clientlib/python/local_testing/: mosquitto.basic.conf  mosquitto.conf  password.txt  test_rsa_private.pem
docs/: readme.md
docs/demos/: presentation_layer.html  readme.md
docs/messages/: pointset.md
docs/specs/: blobset.md  buckets.md  categories.md  key_rotation.md  ota_updates.md  readme.md
docs/specs/sequences/: blobset.md  generated.md  ota_updates.md  readme.md  state_etag.md  writeback.md
edge/clientlib/python/: README.md  (+1 more)
edge/spotter/: discoverynode.md  plan.md
etc/: requirements.txt  schema_itemized.out  sequencer.out  sequencer_nostate.out  test_itemized.out  test_itemized.out.rej
gencode/docs/: commands_mapping.html  config.html  configuration_execution.html  events.html  events_discovery.html  events_mapping.html  events_system.html  events_udmi.html  events_validation.html  metadata.html  monitoring.html  state.html  state_mapping.html  state_validation.html
pyudmi/: .gitignore  pyproject.toml
schema/: category.json  common.json  events_system.json
sentinel/: README.md  pyproject.toml
sentinel/src/sentinel/: ai.py  db.py  ingestion.py  main.py  reporting.py  weaver.py
services/: build.gradle
validator/: build.gradle
(+83 files in other folders)
